--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Pencatat Handal - FP Grafkom</title>
 </head>
 <body>
-    <canvas id="canvas-preview">
-        Sorry, WebGL not supported.
-    </canvas>
+    <script src="./js/three.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
