--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Pencatat Handal - FP Grafkom</title>
 </head>
 <body>
-    <script src="./js/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="./js/cannon.min.js"></script>
+    <script src="./js/assetsLoader.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
