--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="./js/cannon.min.js"></script>
     <script src="./js/assetsLoader.js"></script>
+    <script src="./js/skyLoader.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
