Split up main into separate functions file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
     <script src="./js/cannon.min.js"></script>
     <script src="./js/custom-library.js"></script>
     <script src="./js/assetsLoader.js"></script>
+    <script src="./js/loadAssets.js"></script>
     <script src="./js/skyLoader.js"></script>
+
+    <script src="./js/functions/airplane.js"></script>
+    <script src="./js/functions/boxBase.js"></script>
+    <script src="./js/functions/boxCover.js"></script>
+    <script src="./js/functions/boxRoof.js"></script>
+    <script src="./js/functions/groundDecorations.js"></script>
+    <script src="./js/functions/skybox.js"></script>
+
+    <script src="./js/functions/_loadExternalAssets.js"></script>
+    <script src="./js/functions/_updateExternalAssets.js"></script>
+
     <script src="./js/main.js"></script>
 </body>
 </html>
