--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="./js/cannon.min.js"></script>
     <script src="./js/custom-library.js"></script>
     <script src="./js/assetsLoader.js"></script>
-    <script src="./js/loadAssets.js"></script>
     <script src="./js/skyLoader.js"></script>
 
     <script src="./js/functions/airplane.js"></script>
@@ -21,6 +20,7 @@
     <script src="./js/functions/boxCover.js"></script>
     <script src="./js/functions/boxRoof.js"></script>
     <script src="./js/functions/groundDecorations.js"></script>
+    <script src="./js/functions/skyDecorations.js"></script>
     <script src="./js/functions/skybox.js"></script>
 
     <script src="./js/functions/_loadExternalAssets.js"></script>
