fixing start button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Pencatat Handal - FP Grafkom</title>
 </head>
-<body onload="init()">
+<body>
     <div id="instructions">
         <div class="player" onclick="startGame()">
             <button role="play" class="play"></button>
@@ -28,7 +28,7 @@
     <div id="text">
         <p>Stack the blocks on top of each other</p>
         <p>Click, tap or press Space when a block is above the stack. Can you reach the blue color blocks?</p>
-        <p>Click, tap or press Space to start game</p>
+        <p>Click start button to play the game</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
