Fix camera orbit bug and false position

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="instructions">
-        <div class="player" onclick="startGame()">
+        <div class="player">
             <button role="play" class="play"></button>
         </div>
         
