--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="./js/functions/boxBase.js"></script>
     <script src="./js/functions/boxCover.js"></script>
     <script src="./js/functions/boxRoof.js"></script>
+    <script src="./js/functions/environmentDecorations.js"></script>
     <script src="./js/functions/groundDecorations.js"></script>
     <script src="./js/functions/skyDecorations.js"></script>
     <script src="./js/functions/skybox.js"></script>
