Add environment variable files

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="./js/functions/_loadExternalAssets.js"></script>
     <script src="./js/functions/_updateExternalAssets.js"></script>
 
+    <script src="./js/env.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
