--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="./js/skyLoader.js"></script>
 
     <script src="./js/functions/airplane.js"></script>
+    <script src="./js/functions/cars.js"></script>
     <script src="./js/functions/boxBase.js"></script>
     <script src="./js/functions/boxCover.js"></script>
     <script src="./js/functions/boxRoof.js"></script>
