--- a/index.html
+++ b/index.html
@@ -18,16 +18,12 @@
         <div class="content">
             <p>You missed the block</p>
             <p>To reset the game press R</p>
-            <p>
-            Follow me
-            <a href="https://twitter.com/HunorBorbely" , target="_blank">@HunorBorbely</a>
-            </p>
         </div>
     </div>
     <div id="score">0</div>
     <div id="text">
         <p>Stack the blocks on top of each other</p>
-        <p>Click, tap or press Space when a block is above the stack. Can you reach the blue color blocks?</p>
+        <p>Click, tap or press Space when a block is above the stack.</p>
         <p>Click start button to play the game</p>
     </div>
 
