add start function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="instructions">
-        <div class="player">
+        <div class="player" id="start">
             <button role="play" class="play"></button>
         </div>
         
