Update main menu GBA

--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 </head>
 <body>
     <div id="instructions">
+        <div id="title">
+            <img src="./assets/images/gba.png" height="200" />
+        </div>
         <div class="player" id="start">
             <button role="play" class="play"></button>
         </div>
-        
+        <div id="credits">
+            <p>
+                A FP Presented by:<br/>
+                Pencatat Handal<br/>
+                <br/>
+                Credits:<br/>
+                Sketchfab<br/>
+                HunorBorbely<br/>
+                Poly Haven<br/>
+            </p>
+        </div>
     </div>
     <div id="results">
         <div class="content">
