Add game instructions and descriptions

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     </div>
     <div id="score">0</div>
     <div id="text">
-        <p>Stack the blocks on top of each other</p>
-        <p>Click, tap or press Space when a block is above the stack.</p>
-        <p>Click start button to play the game</p>
+        <p>
+            Los Darjo is on an economic disaster, <br/>
+            which require to build the highest apartment in the East Javeras!<br/>
+            Tap or press Space when a apartment block is above the building.<br/>
+        </p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
