--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
 
     <script src="./js/env.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/interface.js"></script>
 </body>
 </html>
