Add and implement graphics settings

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         </p>
     </div>
 
+    <div id="settings">
+        <div>
+            <label for="enable_fog">Enable Fog</label>
+            <input type="checkbox" id="enable_fog" />
+            <label style="margin-left: 15px;" for="enable_fog">Enable Shadow</label>
+            <input type="checkbox" id="enable_shadow" />
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="./js/cannon.min.js"></script>
