--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="instructions">
         <div id="title">
             <img src="./assets/images/gba.png" height="200" />
+            <progress id="loader_progress" value="32" max="100"> 32% </progress>
         </div>
         <div class="player" id="start">
             <button role="play" class="play"></button>
@@ -52,6 +53,10 @@
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="./js/cannon.min.js"></script>
     <script src="./js/custom-library.js"></script>
+
+    <script src="./js/env.js"></script>
+    <script src="./js/interface.js"></script>
+
     <script src="./js/assetsLoader.js"></script>
     <script src="./js/skyLoader.js"></script>
 
@@ -68,8 +73,6 @@
     <script src="./js/functions/loadExternalAssets.js"></script>
     <script src="./js/functions/updateExternalAssets.js"></script>
 
-    <script src="./js/env.js"></script>
-    <script src="./js/interface.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
