Added Background Music

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Pencatat Handal - FP Grafkom</title>
+
+    <audio loop autoplay id="backsound">
+        <source src="assets/audio/ES_Deep Down Diamond Alley - Josef Bel Habib.mp3" type="audio/mp3">
+    </audio>
+    <script>
+        var audio = document.getElementById("backsound");
+        audio.volume = 0.2;
+    </script>
 </head>
 <body>
     <div id="instructions">
