Added audio mute while playing game

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <source src="assets/audio/ES_Deep Down Diamond Alley - Josef Bel Habib.mp3" type="audio/mp3">
     </audio>
     <script>
-        var audio = document.getElementById("backsound");
-        audio.volume = 0.2;
+            var audio = document.getElementById("backsound");
+            audio.volume = 0.2;
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="instructions">
